--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,14 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
-
+network/[Ll]ibrary/
+network/[Tt]emp/
+network/[Oo]bj/
+network/[Bb]uild/
+network/[Bb]uilds/
+network/[Ll]ogs/
+network/[Mm]emoryCaptures/
+build/
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
